bee updates